--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -39,7 +39,7 @@ jobs:
         version: v1
         project_id: ${{ secrets.GCP_PROJECT }}
         flags: |-
-          --gcs-staging-source-dir=gs://us-artifacts-salaah-x/${{ github.sha }}
+          --bucket=gs://us-artifacts-salaah-x/${{ github.sha }}
         env_vars: |-
           VCS_REVISION=${{ steps.commit.outputs.short }}
 
